--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
 
           {meta.phase === 'roundSummary' && (
             <div>
-              <h2 style={{fontSize:20, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 8px 0'}}>🏆 Zwischenstand nach Runde {meta.round - 1}</h2>
+              <h2 style={{fontSize:20, fontWeight:900, color:'var(--rtl-orange)', margin:'0 0 8px 0'}}>Zwischenstand nach Runde {meta.round - 1}</h2>
               <p style={{color:'var(--muted)', fontSize:'14px', marginBottom:10}}>Aktueller Stand aller Spieler</p>
 
               <div className="scrollable-section compact-grid">
@@ -1586,7 +1586,7 @@
         return (
           <div className="min-h-screen flex items-center justify-center" style={{padding:20, background:'var(--bg)'}}>
             <div className="card" style={{maxWidth:500, textAlign:'center'}}>
-              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>🏆 Finale</h2>
+              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>Finale</h2>
               <p style={{marginTop:12, color:'var(--muted)'}}>
                 Du hast es leider nicht ins Finale geschafft. Die Top 2 Spieler bereiten sich jetzt vor!
               </p>
@@ -1604,7 +1604,7 @@
         <div className="min-h-screen" style={{padding:20, background:'var(--bg)'}}>
           <div style={{padding:24, background:'rgba(255,255,255,0.01)', maxWidth:700, margin:'0 auto'}} className="card">
             <div style={{textAlign:'center'}}>
-              <h2 style={{fontSize:32, fontWeight:900, color:'var(--rtl-orange)', marginBottom:12}}>🏆 FINALE</h2>
+              <h2 style={{fontSize:32, fontWeight:900, color:'var(--rtl-orange)', marginBottom:12}}>FINALE</h2>
               <p style={{fontSize:18, color:'var(--muted)', marginBottom:20}}>
                 Glückwunsch! Du hast dich qualifiziert!
               </p>
@@ -1820,7 +1820,7 @@
         return (
           <div className="min-h-screen flex items-center justify-center" style={{padding:20, background:'var(--bg)'}}>
             <div className="card" style={{maxWidth:500, textAlign:'center'}}>
-              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>🏆 Finale läuft</h2>
+              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>Finale läuft</h2>
               <p style={{marginTop:12, color:'var(--muted)'}}>
                 Du hast es leider nicht ins Finale geschafft. Die Top 2 Spieler kämpfen jetzt um den Sieg!
               </p>
@@ -1839,7 +1839,7 @@
           <div style={{padding:16, background:'rgba(255,255,255,0.01)'}} className="card">
             <div style={{display:'flex', justifyContent:'space-between', alignItems:'center'}}>
               <div>
-                <div style={{fontSize:20, fontWeight:900, color:'var(--rtl-orange)'}}>🏆 FINALE</div>
+                <div style={{fontSize:20, fontWeight:900, color:'var(--rtl-orange)'}}>FINALE</div>
                 <div style={{color:'var(--muted)'}}>Frage {finalQIndex + 1} von {FINAL_QUESTIONS}</div>
               </div>
               <div style={{fontSize:18, fontWeight:900, color:'var(--rtl-orange)'}}>{timeLeft}s</div>
@@ -1897,7 +1897,7 @@
         return (
           <div className="min-h-screen flex items-center justify-center" style={{padding:20, background:'var(--bg)'}}>
             <div className="card" style={{maxWidth:500, textAlign:'center'}}>
-              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>🏆 Finale - Auswertung</h2>
+              <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)'}}>Finale - Auswertung</h2>
               <p style={{marginTop:12, color:'var(--muted)'}}>
                 Der Host wertet gerade die Antworten aus...
               </p>
@@ -1910,7 +1910,7 @@
       return (
         <div className="min-h-screen" style={{padding:20, background:'var(--bg)'}}>
           <div style={{padding:16, background:'rgba(255,255,255,0.01)'}} className="card">
-            <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)', textAlign:'center'}}>🏆 Auswertung läuft...</h2>
+            <h2 style={{fontSize:24, fontWeight:900, color:'var(--rtl-orange)', textAlign:'center'}}>Auswertung läuft...</h2>
             <p style={{marginTop:12, color:'var(--muted)', textAlign:'center'}}>
               Der Host bewertet gerade deine Antworten.
             </p>
@@ -2212,6 +2212,7 @@ root.render(<App />);
   </script>
 </body>
 </html>
+
 
 
 
