--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RTL AdAlliance Quiz - Final TV Version</title>
+  <title>RTL AdAlliance Quiz - Final V5</title>
 
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
@@ -93,6 +93,7 @@
         padding: 20px 40px;
         background: #000;
         border-bottom: 2px solid rgba(255,255,255,0.08);
+        height: 130px; /* Fixed height to prevent layout jumps */
     }
 
     .countdown-badge{ width:90px; height:90px; display:flex; align-items:center; justify-content:center; font-size:2.8rem; font-weight:900; color:var(--tile); border:4px solid rgba(255,255,255,0.15); background:#000; }
@@ -266,7 +267,6 @@
   }
 
   function ConfettiRain() {
-     // Creates a simple confetti effect
      const particles = Array.from({length: 50});
      return (
         <div style={{position:'fixed', inset:0, pointerEvents:'none', overflow:'hidden', zIndex:0}}>
@@ -551,11 +551,12 @@
     const question = (game.questions || [])[qIndex];
     const countdownClass = timeLeft <= 10 ? 'danger' : timeLeft <= 20 ? 'warning' : '';
 
-    // FIX: Check if we are in ANY final phase
     const isFinalPhase = meta.phase.startsWith('final');
-    // FIX: Force "FINALE" title if in final phase
     const displayCategory = isFinalPhase ? "FINALE" : (meta.currentCategory || question?.category || 'Allgemein');
     const displayCategoryColor = isFinalPhase ? 'var(--rtl-red)' : 'var(--rtl-orange)';
+
+    // Special Sorting for Results Phase: Sort by points earned in this round (highest first)
+    const resultsRanking = [...playersArr].sort((a,b) => (b.lastPoints||0) - (a.lastPoints||0));
 
     return (
       <div className="host-screen">
@@ -606,15 +607,24 @@
             {/* TOP BAR */}
             {meta.phase !== 'finalIntro' && meta.phase !== 'finished' && (
                 <div className="game-top-bar">
-                     <div style={{display:'flex', alignItems:'center', gap:20}}>
-                        <div className={`countdown-badge ${countdownClass}`}>{timeLeft}</div>
-                        <div>
-                          <div style={{color:'var(--muted)', fontSize:'1rem', textTransform:'uppercase'}}>
-                              {isFinalPhase ? 'Das Finale' : `Runde ${meta.round || 1} | Frage ${(qIndex%QUESTIONS_PER_ROUND)+1}`}
-                          </div>
-                          <div style={{fontWeight:900, fontSize:'1.8rem', color: displayCategoryColor}}>{displayCategory}</div>
+                     {meta.phase === 'roundSummary' ? (
+                        /* CLEAN HEADER FOR ROUND SUMMARY */
+                        <div style={{display:'flex', alignItems:'center', width:'100%'}}>
+                            <div style={{fontSize:'3rem', fontWeight:900, color:'white', letterSpacing:2}}>ZWISCHENSTAND</div>
                         </div>
-                     </div>
+                     ) : (
+                        /* STANDARD HEADER */
+                        <div style={{display:'flex', alignItems:'center', gap:20}}>
+                            <div className={`countdown-badge ${countdownClass}`}>{timeLeft}</div>
+                            <div>
+                              <div style={{color:'var(--muted)', fontSize:'1rem', textTransform:'uppercase'}}>
+                                  {isFinalPhase ? 'Das Finale' : `Runde ${meta.round || 1} | Frage ${(qIndex%QUESTIONS_PER_ROUND)+1}`}
+                              </div>
+                              <div style={{fontWeight:900, fontSize:'1.8rem', color: displayCategoryColor}}>{displayCategory}</div>
+                            </div>
+                        </div>
+                     )}
+                     
                      <div style={{display:'flex', alignItems:'center', gap:20}}>
                         {meta.phase === 'question' && <button className="btn btn-show-results" onClick={showResultsNow}>Lösung anzeigen ▶</button>}
                         {meta.phase === 'results' && <button className="btn btn-host" onClick={startNextRound}>Weiter ▶</button>}
@@ -638,7 +648,7 @@
                         </div>
                       ))}
                     </div>
-                    {/* --- NEU: ANTWORT STATUS LEISTE --- */}
+                    {/* ANTWORT STATUS LEISTE */}
                     <div style={{marginTop: 'auto', paddingTop: 30, borderTop:'1px solid rgba(255,255,255,0.1)', width:'100%'}}>
                         <div style={{fontSize:16, color:'var(--muted)', marginBottom:15, textAlign:'center', textTransform:'uppercase', letterSpacing:1, fontWeight:700}}>
                             Spieler Status ({playersArr.filter(p => p.currentAnswer !== undefined && p.currentAnswer !== null).length} / {playersArr.length})
@@ -669,21 +679,24 @@
                 {meta.phase === 'results' && question && (
                    <div className="results-split-view">
                       <div className="results-col">
-                         <div style={{padding:30, background:'#fff', color:'#000', marginBottom:20}}>
-                            <div style={{fontSize:16, textTransform:'uppercase', fontWeight:900, color:'var(--rtl-green)'}}>Richtige Antwort</div>
-                            <div style={{fontSize:40, fontWeight:900}}>{question.answers[question.correct]}</div>
-                         </div>
-                         <div style={{display:'grid', gap:12, flex:1, overflow:'auto'}}>
+                         {/* REMOVED SEPARATE ANSWER BOX AS REQUESTED */}
+                         <div style={{display:'grid', gap:12, flex:1, overflow:'auto', alignContent:'center', height:'100%'}}>
                             {question.answers.map((a,i)=>{
                               const isCorrect = i === question.correct;
                               const voters = playersArr.filter(p => p.currentAnswer === i);
                               return (
-                                <div key={i} style={{padding:20, border: isCorrect ? '5px solid var(--rtl-green)' : '1px solid rgba(255,255,255,0.1)', background: isCorrect ? 'rgba(34,197,94,0.15)' : 'rgba(255,255,255,0.02)'}}>
+                                <div key={i} style={{
+                                    padding:30, 
+                                    /* CHANGED TO WHITE HIGHLIGHT AS REQUESTED */
+                                    border: isCorrect ? '5px solid white' : '1px solid rgba(255,255,255,0.1)', 
+                                    background: isCorrect ? 'rgba(255,255,255,0.15)' : 'rgba(255,255,255,0.02)',
+                                    transform: isCorrect ? 'scale(1.02)' : 'scale(1)'
+                                }}>
                                   <div style={{display:'flex', justifyContent:'space-between', alignItems:'center'}}>
-                                    <div style={{fontWeight:900, fontSize:22}}>{String.fromCharCode(65+i)}. {a}</div>
-                                    {isCorrect && <div style={{fontSize:28}}>✅</div>}
+                                    <div style={{fontWeight:900, fontSize:28}}>{String.fromCharCode(65+i)}. {a}</div>
+                                    {/* REMOVED GREEN CHECKMARK EMOJI AS REQUESTED */}
                                   </div>
-                                  <div style={{marginTop:8, fontSize:18, color:'var(--muted)'}}>
+                                  <div style={{marginTop:12, fontSize:20, color:'var(--muted)'}}>
                                     {voters.length} Stimmen {voters.length>0 && `(${voters.map(p=>p.name).join(', ')})`}
                                   </div>
                                 </div>
@@ -710,16 +723,17 @@
                            </div>
                          </div>
                          <div style={{flex:1, display:'flex', flexDirection:'column', background:'rgba(255,255,255,0.02)', padding:20, border:'1px solid rgba(255,255,255,0.05)'}}>
-                            <h3 style={{color:'var(--rtl-orange)', fontWeight:900, marginBottom:15, fontSize:22}}>Rangliste</h3>
+                            <h3 style={{color:'var(--rtl-orange)', fontWeight:900, marginBottom:15, fontSize:22}}>Score (Frage)</h3>
                             <div className="scroll-area" style={{flex:1}}>
-                              {playersArr.map((p,i)=>(
+                              {/* SORTED BY POINTS EARNED IN THIS QUESTION, DISPLAY ONLY POINTS EARNED */}
+                              {resultsRanking.map((p,i)=>(
                                 <div key={p.pid} style={{display:'flex', justifyContent:'space-between', padding:'12px', background:i<3?'rgba(255,255,255,0.05)':'transparent', marginBottom:4}}>
                                   <div style={{display:'flex', gap:8}}>
-                                    <span style={{fontWeight:700, fontSize:18}}>#{i+1} {p.name}</span>
-                                    {meta.categoryChooserForRound === p.pid && <span style={{fontSize:12, background:'var(--rtl-purple)', padding:'2px 6px', alignSelf:'center'}}>WÄHLER (x1.2)</span>}
+                                    <span style={{fontWeight:700, fontSize:18}}>{p.name}</span>
+                                    {meta.categoryChooserForRound === p.pid && <span style={{fontSize:12, background:'var(--rtl-purple)', padding:'2px 6px', alignSelf:'center'}}>x1.2</span>}
                                   </div>
-                                  <div style={{fontWeight:900, color: p.lastPoints>0 ? 'var(--rtl-green)' : 'var(--tile)', fontSize:18}}>
-                                    {p.score} <span style={{fontSize:14, opacity:0.7}}>(+{p.lastPoints})</span>
+                                  <div style={{fontWeight:900, color: p.lastPoints>0 ? 'var(--rtl-green)' : 'var(--muted)', fontSize:18}}>
+                                     {p.lastPoints > 0 ? '+' : ''}{p.lastPoints}
                                   </div>
                                 </div>
                               ))}
@@ -732,9 +746,19 @@
                 {meta.phase === 'roundSummary' && (
                    <div style={{width:'100%', height:'100%', display:'flex', flexDirection:'column'}}>
                       <h2 style={{textAlign:'center', fontSize:48, fontWeight:900, color:'var(--rtl-orange)', marginBottom:20}}>Stand nach Runde {meta.round - 1}</h2>
-                      <div style={{textAlign:'center', color:'var(--muted)', marginBottom:30, fontSize:20}}>
-                        Der Spieler auf dem letzten Platz wählt die nächste Kategorie.
-                        {meta.categoryChooserCandidate && <div style={{color:'white', fontWeight:900, marginTop:10}}>WÄHLER: {game.players[meta.categoryChooserCandidate]?.name}</div>}
+                      <div style={{textAlign:'center', color:'var(--muted)', marginBottom:30, fontSize:20, display:'flex', flexDirection:'column', gap:10, alignItems:'center'}}>
+                         <div>Der Spieler auf dem letzten Platz wählt die nächste Kategorie.</div>
+                         {meta.categoryChooserCandidate && (
+                            <div style={{background:'rgba(255,255,255,0.1)', padding:'10px 20px', border:'1px solid rgba(255,255,255,0.2)', display:'flex', gap:15, alignItems:'center'}}>
+                                <span style={{fontWeight:700}}>WÄHLER: {game.players[meta.categoryChooserCandidate]?.name}</span>
+                                {/* SHOW SELECTION STATUS */}
+                                {game.meta?.nextCategory ? (
+                                    <span style={{color:'var(--rtl-green)', fontWeight:900}}>HAT GEWÄHLT: {game.meta.nextCategory}</span>
+                                ) : (
+                                    <span style={{color:'var(--rtl-orange)', fontWeight:900, animation:'pulse 1s infinite'}}>WÄHLT...</span>
+                                )}
+                            </div>
+                         )}
                       </div>
                       <div className="scroll-area" style={{flex:1, background:'rgba(255,255,255,0.02)', padding:40, border:'1px solid rgba(255,255,255,0.05)'}}>
                          {playersArr.map((p,i)=>(
@@ -897,7 +921,6 @@
                  </div>
                  <div style={{fontSize:28, padding:20, background:'rgba(0,0,0,0.5)', marginBottom:20, fontStyle:'italic'}}>"{f.finalAnswers?.[reviewIndex] || '---'}"</div>
                  {judged[f.pid] === undefined ? (
-                    /* NEUES BUTTON DESIGN: WEISS / DUNKEL */
                     <div style={{display:'flex', gap:20}}>
                        <button className="btn" style={{flex:1, background:'white', color:'black', border:'2px solid white', fontSize:20}} onClick={()=>handleJudge(f.pid, true)}>✓ KORREKT</button>
                        <button className="btn" style={{flex:1, background:'transparent', border:'2px solid rgba(255,255,255,0.2)', color:'white'}} onClick={()=>handleJudge(f.pid, false)}>✗ FALSCH</button>
@@ -927,7 +950,7 @@
     const [shieldModalOpen, setShieldModalOpen] = useState(false);
     const [bonusCategoryModalOpen, setBonusCategoryModalOpen] = useState(false);
     const [finalAnswer, setFinalAnswer] = useState('');
-    const [hasUsedItem, setHasUsedItem] = useState(false); // NEU: Status Item genutzt
+    const [hasUsedItem, setHasUsedItem] = useState(false); 
 
     useEffect(() => { if(playerId && gameId) { sessionStorage.setItem(`quiz_pid_${gameId}`, playerId); } }, [playerId, gameId]);
 
@@ -941,7 +964,6 @@
       return ()=> { gRef.off(); mRef.off(); pRef.off(); };
     },[gameId, playerId]);
 
-    // NEU: Reset Item-Nutzung wenn neue Frage kommt
     useEffect(() => {
         setHasUsedItem(false);
     }, [meta?.questionIndex]);
@@ -1069,7 +1091,13 @@
        return (
          <div className="min-h-screen p-4" style={{overflowY:'auto'}}>
            <div className="card">
-             <div style={{display:'flex',justifyContent:'space-between'}}><span>Runde {meta.round}</span><span style={{fontWeight:900,color:'var(--rtl-orange)'}}>{timeLeft}s</span></div>
+             {/* PLAYER HEADER with Total Score */}
+             <div style={{display:'flex', justifyContent:'space-between', borderBottom:'1px solid rgba(255,255,255,0.1)', paddingBottom:10, marginBottom:15}}>
+                 <span style={{fontWeight:700, color:'var(--muted)'}}>Runde {meta.round}</span>
+                 <span style={{fontWeight:900, color:'var(--tile)'}}>Gesamt: {player.score}</span>
+             </div>
+             
+             <div style={{display:'flex',justifyContent:'space-between'}}><span>Zeit:</span><span style={{fontWeight:900,color:'var(--rtl-orange)'}}>{timeLeft}s</span></div>
              <h3 style={{fontSize:20,fontWeight:900,marginTop:12}}>{question?.question}</h3>
              <div style={{display:'grid', gap:10, marginTop:20}}>
                {question?.answers.map((a,i)=>(
@@ -1128,6 +1156,11 @@
         return (
             <div className="min-h-screen flex items-center justify-center p-4" style={{background:'var(--bg)'}}>
                 <div className="card" style={{textAlign:'center', width:'100%'}}>
+                    {/* PLAYER HEADER with Total Score */}
+                    <div style={{display:'flex', justifyContent:'flex-end', borderBottom:'1px solid rgba(255,255,255,0.1)', paddingBottom:10, marginBottom:20}}>
+                         <span style={{fontWeight:900, color:'var(--tile)'}}>Gesamt: {player.score}</span>
+                    </div>
+
                     <div style={{fontSize:80, marginBottom:10}}>{isCorrect ? '😎' : '🫠'}</div>
                     <h2 style={{fontSize:32, fontWeight:900, color: isCorrect ? 'var(--rtl-green)' : 'var(--rtl-red)', marginBottom:20}}>
                         {isCorrect ? 'RICHTIG' : 'FALSCH'}
@@ -1237,8 +1270,6 @@
   </script>
 </body>
 </html>
-
-
 
 
 
