--- a/index.html
+++ b/index.html
@@ -982,6 +982,10 @@
     const question = (game.finalQuestions || [])[finalQIndex];
     const finalists = (meta.finalists || []).map(pid => ({ pid, ...(game.players?.[pid] || {}) }));
     const allAnswered = finalists.every(f => f.finalAnswers?.[finalQIndex]);
+    
+    // **FIX: Ausgelagerter Button-Text zur Vermeidung von Babel SyntaxError**
+    const buttonText = finalQIndex + 1 >= FINAL_QUESTIONS ? 'ZUR AUSWERTUNG' : 'NÄCHSTE FRAGE';
+
     return (
       <div style={{textAlign:'center', width:'100%', maxWidth:1400}}>
         <h2 style={{fontSize:50, fontWeight:900, lineHeight:1.3}}>{question?.question}</h2>
@@ -1000,7 +1004,8 @@
              </div>
           ))}
         </div>
-        {(timeLeft === 0 || allAnswered) && <button className="btn btn-host" onClick={onNext} style={{marginTop:60, fontSize:28, padding:'20px 40px'}>{finalQIndex+1 >= FINAL_QUESTIONS ? 'ZUR AUSWERTUNG' : 'NÄCHSTE FRAGE'}</button>}
+        {/* Korrigierte Zeile (jetzt buttonText verwendend) */}
+        {(timeLeft === 0 || allAnswered) && <button className="btn btn-host" onClick={onNext} style={{marginTop:60, fontSize:28, padding:'20px 40px'}}>{buttonText}</button>}
       </div>
     );
   }
